WIP merge shared rtss module into server-stats: styles

--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -8,19 +8,16 @@
 .rtss {
   font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
+  background-color: #3D4247; /*@gray8*/
+  height: 100vh;
   min-width: 100%;
-  /*background-color: @gray8;*/
-  background-color: #3D4247;
-  //height: 100vh;
-  //overflow-x: scroll;
-
+  overflow-x: scroll;
 
   .chart {
     width: 100%;
     float: left;
     margin-bottom: 8px;
   }
-
   .tab-nav-bar-header {
     top: 0;
   }
