--- a/src/internal-packages/server-stats/styles/rtss-lists.less
+++ b/src/internal-packages/server-stats/styles/rtss-lists.less
@@ -2,13 +2,9 @@
   height: 100%;
 }
 .rt-perf {
-  .column-container {
-    padding: 10px;
-  }
-  .column.main {
-    background-color: #3D4247;
-    padding: 0 0 36px 0;
-  }
+  height: auto;
+  overflow: scroll;
+  border-top: #545454 1px  solid;
 }
 
 .rt__lists-out {
@@ -16,28 +12,19 @@
   justify-content: center;
 }
 
-.listview {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .rt-lists {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  flex-basis: 290px;
-  width: 440px;
+  width: 480px;
+  height: 290px;
   overflow: hidden;
+  margin-right: 60px;
   box-sizing: padding-box;
   -moz-box-sizing: padding-box;
   -webkit-box-sizing: padding-box;
   padding-top: 35px;
 }
-
 .rt-details {
-  width: 440px;
+  width: 480px;
+  margin-right: 60px;
   padding-top: 35px;
 }
 .rt-lists:last-child {
@@ -46,7 +33,7 @@
 }
 .rt-lists__listdiv {
   height: 100%;
-  overflow-y: auto;
+  overflow: scroll;
   margin: 0;
   padding: 0;
 }
@@ -58,9 +45,8 @@
   border-bottom: 3px #3D4247 solid;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
 }
-.rt-lists__item--slow {
+.rt-lists__item {
   cursor: pointer;
 }
 .rt-lists__empty-error {
@@ -208,7 +194,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 400px;
+  width: 440px;
   background-color: #484D51;
   margin-left: 40px;
   font-size: 10px;
@@ -293,23 +279,10 @@
   font-weight: 300;
   left: 20px;
   height: 390px;
-  width: 360px;
-  overflow-y: auto;
+  width: 400px;
+  overflow-y: scroll;
   word-wrap: break-word; /* IE>=5.5 */
   white-space: pre; /* IE>=6 */
   white-space: -moz-pre-wrap; /* For Fx<=2 */
   white-space: pre-wrap; /* Fx>3, Opera>8, Safari>3*/
-}
-
-.rt-lists__listdiv,
-.rt-details__raw {
-  &::-webkit-scrollbar-track {
-    background-color: rgba(0,0,0,.16);
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: #484D51;
-    border: 1px solid rgba(0,0,0,.4);
-  }
 }
