--- a/src/internal-packages/server-stats/styles/rt-graphs.less
+++ b/src/internal-packages/server-stats/styles/rt-graphs.less
@@ -1,4 +1,4 @@
-.server-stats {
+.rtss {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -7,66 +7,11 @@
   justify-content: space-around;
 }
 
-.opcounters,
-.network,
-.mem,
-.globallock {
-  flex: 1;
-  display: flex;
-  justify-content: space-around;
-}
-
-.chart-rect {
-  fill: #484D51;
-}
 
 .error-message {
   text-transform: uppercase;
   text-anchor: middle;
   font-size: 14px;
-  fill: white;
-}
-
-.chart-title {
-  text-transform: uppercase;
-  text-anchor: start;
-  font-size: 11px;
-  font-weight: bold;
-  fill: white;
-}
-
-.axis-labels {
-  font-size: 9px;
-}
-.y-label {
-  text-anchor: end;
-  fill: #9ca4ab;
-}
-.second-label {
-  text-anchor: start;
-  fill: #9ca4ab;
-}
-
-.x-label {
-  text-anchor: middle;
-  fill: #9ca4ab;
-}
-.line-div, .second-line-div {
-  opacity: 1;
-  fill: none;
-  stroke-width: 2px;
-}
-.legend-box {
-  stroke-width: 2px;
-  fill-opacity: 1;
-}
-.legend-linename {
-  text-transform: uppercase;
-  font-size: 10px;
-  fill: #9ca4ab;
-}
-.legend-count {
-  font-size: 12px;
   fill: white;
 }
 .focus {
@@ -75,33 +20,57 @@
   font-size: 11px;
   text-anchor: middle;
 }
-.overlay-line {
-  stroke-width: 1px;
-}
-.overlay-bubbles {
-  stroke: none;
-}
-.chart-color-0 { /* teal */
-  stroke: #45BAAB;
-  fill: #45BAAB;
-}
-.chart-color-1 { /* blue */
-  stroke: #23B1FF;
-  fill: #23B1FF;
-}
-.chart-color-2 { /* purple */
-  stroke: #6F72FF;
-  fill: #6F72FF;
-}
-.chart-color-3 { /* red */
-  stroke: #A33A35;
-  fill: #A33A35;
-}
-.chart-color-4 { /* orange */
-  stroke: #FFA900;
-  fill: #FFA900;
-}
-.chart-color-5 { /* yellow */
-  stroke: #C7E82F;
-  fill: #C7E82F;
+.serverstats {
+
+  &-chart-background {
+    fill: #484D51;
+  }
+
+  &-chart-title {
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: bold;
+    color: white;
+    margin: 15px 0 0 55px;
+  }
+
+  &-y-axis-label, &-y2-axis-label {
+    font-size: 9px;
+    color: #9ca4ab;
+    margin: 5px 0;
+  }
+
+  &-legend-item, &-legend-2-item {
+    margin-top: 5px;
+    display: flex;
+    flex-grow: 1;
+  }
+
+  &-legend-item {
+    margin-right: 18px;
+  }
+
+  &-legend-2-item {
+    margin-left: 18px;
+  }
+
+  &-legend-linename, &-legend-2-linename {
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #9ca4ab;
+    margin: 0 0 0 5px;
+  }
+
+  &-legend-count, &-legend-2-count {
+    font-size: 12px;
+    color: white;
+    margin: 5px 0 0 5px;
+  }
+
+  &-overlay-line {
+    stroke-width: 1px;
+  }
+  &-overlay-triangle {
+    stroke: none;
+  }
 }
