renamed style files

--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -1,16 +1,9 @@
-<<<<<<< HEAD
 @import './rtss-db.less';
 @import './rtss-lists.less';
 @import './rtss-nav.less';
-@import './chart.less';
+//@import './chart.less';
 @import './rtss-errors.less';
-=======
-@import './rt-db.less';
-@import './rt-lists.less';
-@import './rt-nav.less';
 @import './rt-graphs.less';
-@import './rt-errors.less';
->>>>>>> ad536f8... Styles WIP
 @import './rtss-databases.less';
 
 .rtss {
@@ -19,16 +12,7 @@
   height: 100vh;
   min-width: 100%;
 
-<<<<<<< HEAD
-  .chart {
-    width: 100%;
-    float: left;
-    margin-bottom: 8px;
-  }
   .tab-nav-bar-header {
-=======
-  .rt-nav header {
->>>>>>> ad536f8... Styles WIP
     top: 0;
   }
 
