--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -1,16 +1,15 @@
 @import './rtss-db.less';
 @import './rtss-lists.less';
 @import './rtss-nav.less';
-//@import './chart.less';
 @import './rtss-errors.less';
-@import './rt-graphs.less';
+@import './rt-charts.less';
 @import './rtss-databases.less';
 
 .rtss {
   font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
-  height: 100vh;
   min-width: 100%;
+  background-color: @gray8;
 
   .tab-nav-bar-header {
     top: 0;
