fix className rename

--- a/src/internal-packages/home/styles/index.less
+++ b/src/internal-packages/home/styles/index.less
@@ -109,7 +109,7 @@ GLOBAL FLEXBOX LAYOUT STYLES
 
 // pull these definitions out from below because RTSS header has an internal conflict
 //TO DO refactor cleanly
-.RTSS, //databases table
+.rtss, //databases table
 .collections, // collections table
 .collection-view {
   display: flex;
