--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -2,7 +2,7 @@
 @import './rtss-lists.less';
 @import './rtss-nav.less';
 @import './rtss-errors.less';
-@import './rt-charts.less';
+@import './rtss-charts.less';
 @import './rtss-databases.less';
 
 .rtss {
