styling on draggable-fields and field/chart panels

--- a/src/internal-packages/chart/styles/index.less
+++ b/src/internal-packages/chart/styles/index.less
@@ -1,5 +1,6 @@
 @import './chart-builder.less';
 @import './encoding-channel.less';
+@import './draggable-field.less';
 
 .chart-container {
   display: flex;
