--- a/src/internal-packages/chart/styles/chart-builder.less
+++ b/src/internal-packages/chart/styles/chart-builder.less
@@ -22,10 +22,11 @@
 
   &-chart-panel {
     background-color: @gray7;
+    padding: 20px 0;
   }
 
   &-field-panel {
-    padding-left: 10px;
+    padding: 10px 0 0 10px;
   }
 
   &-field-group {
