COMPASS-911: Scroll at bottom of document list with indicator

--- a/src/internal-packages/crud/styles/index.less
+++ b/src/internal-packages/crud/styles/index.less
@@ -9,6 +9,7 @@
 @import "./editable-element-field.less";
 @import "./editable-element-value.less";
 @import "./line-number.less";
+@import "./loading-indicator.less";
 @import "./document-footer.less";
 @import "./insert-document-dialog.less";
 
