Style pass for COMPASS-153: Added max-width limits to editable fields, prevent breakage in insert document dialog as well

--- a/src/internal-packages/crud/styles/editable-element-field.less
+++ b/src/internal-packages/crud/styles/editable-element-field.less
@@ -3,6 +3,10 @@
   border: none;
   padding-left: 1px;
   -webkit-user-select: text;
+  max-width: 15vw; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 
   &-is-editing {
     border: 1px solid @gray3;
