--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -1,9 +1,11 @@
 .editable-element-value {
-
   display: inline-block;
   border: none;
   padding-left: 1px;
   max-width: 45vw;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 
   &-is-string {
     white-space: pre-line;
