--- a/src/internal-packages/crud/styles/insert-document-dialog.less
+++ b/src/internal-packages/crud/styles/insert-document-dialog.less
@@ -14,6 +14,14 @@
         color: @gray3;
       }
 
+      .editable-element-field {
+        max-width: 10vw;
+      }
+
+      .editable-element-value {
+        max-width: 20vw; 
+      }
+
       .editable-element-is-added, .editable-expandable-element-header-is-added {
         background-color: @pw;
 
