--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -1,15 +1,14 @@
-@import './rt-db.less';
-@import './rt-lists.less';
-@import './rt-nav.less';
-@import './rt-graphs.less';
-@import './rt-errors.less';
+@import './rtss-db.less';
+@import './rtss-lists.less';
+@import './rtss-nav.less';
+@import './rtss-errors.less';
+@import './rtss-charts.less';
 @import './rtss-databases.less';
 
-.RTSS {
+.rtss {
   font-family: "Akzidenz", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 500;
   min-width: 100%;
-  background-color: @gray8;
 
   .tab-nav-bar-header {
     top: 0;
