--- a/src/internal-packages/crud/styles/document.less
+++ b/src/internal-packages/crud/styles/document.less
@@ -10,6 +10,14 @@
 
   &-elements {
     position: relative;
+
+    .btn {
+      margin: 10px 0px 0px 22px;
+
+      i {
+        margin-right: 5px;
+      }
+    }
   }
 
   &-is-deleting {
@@ -19,39 +27,5 @@
 
   &-is-editing {
     box-shadow: 2px 5px 8px rgba(0, 0, 0, 0.2);
-  }
-
-  &-expander {
-    width: 100%;
-    background-color: #f3f3f3;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: -20px;
-    vertical-align: middle;
-    padding: 8px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-
-    &:hover {
-      i {
-        color: #999999;
-      }
-
-      span {
-        color: #999999;
-      }
-    }
-
-    span {
-      color: #adacac;
-      text-transform: uppercase;
-      font-weight: bold;
-      margin-left: 5px;
-    }
-
-    i {
-      font-size: 18px;
-      color: #CCCCCC;
-    }
   }
 }
