--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -1,6 +1,7 @@
 // Dependencies
 @import "./caret.less";
 @import  "./buttons.less";
+@import "./react-select.less";
 @import "./font-awesome/font-awesome.less";
 @import "../../../node_modules/bootstrap/less/bootstrap.less";
 @import (css) "../../node_modules/highlight.js/styles/github.css";
