Fixed style bugs such as cursor placement on search

--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -27,10 +27,16 @@
       }
 
       .col-md-6 {
+        padding-right: 0px;
+
         .dropdown-menu {
           max-height: 400px;
           overflow: auto;
         }
+      }
+
+      .col-md-4 {
+        padding-right: 0px;
       }
     }
 
