--- a/src/app/styles/react-select.less
+++ b/src/app/styles/react-select.less
@@ -4,7 +4,6 @@
   &-control {
     height: 32px;
     width: 100%;
-    font-size: 12px;
     color: #444444;
     border-radius: 3px;
     border: 1px solid #DDDDDD;
@@ -78,10 +77,6 @@
     padding-bottom: 5px;
   }
 
-  &.is-focused > .Select-control {
-
-  }
-
   &.is-open > .Select-control {
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
@@ -95,7 +90,7 @@
     box-shadow: 0 2px 6px 0 rgba(77,175,233,0.30);
   }
 
-  &.is-focused > .Select-control > .Select-multi-value-wrapper > .Select-input {
+  &.is-searchable.is-open > .Select-control > .Select-multi-value-wrapper > .Select-input {
     background: #FFFFFF;
     border: 1px solid #4EAFE9;
     border-radius: 2px; 
@@ -198,10 +193,6 @@
   font-size: inherit;
   margin: 0;
   outline: none;
-  line-height: 14px;
-  /* For IE 8 compatibility */
-  padding: 8px 0 12px;
-  /* For IE 8 compatibility */
   -webkit-appearance: none;
 }
 .is-focused .Select-input > input {
