--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -48,7 +48,8 @@
       margin-bottom: 5px;
 
       .has-error .Select-control {
-        border-color: #ef4c4c;
+        border: 1px solid #EF4C4C;
+        box-shadow: 0 2px 6px 0 rgba(239,76,76,0.30);
       }
 
       .create-index-field-dropdown-name {
