add a highlight on encoding channel hover

--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -14,5 +14,14 @@
     color: #ccc;
     padding: 2px 4px;
     text-overflow: ellipsis;
+
+    &-over {
+      border: 1px solid #33ccc2;
+      background: white;
+      border-style: double;
+      border-width: 5px;
+      border-radius: 4px;
+    }
   }
+
 }
