--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -3,7 +3,7 @@
 @import "./caret.less";
 @import "./buttons.less";
 @import "./react-select.less";
-@import "./font-awesome/font-awesome.less";
+@import "../../../node_modules/font-awesome/less/font-awesome.less";
 @import (css) "../../node_modules/highlight.js/styles/github.css";
 @import "palette.less";
 @import "fonts.less";
