prevents selecting of text on draggable field

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -29,5 +29,6 @@
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
     text-overflow: ellipsis;
+    pointer-events: none;
   }
 }
