Compass 877 - Create Index Modal Style Pass (Dropdowns) (#871)
* Removed react-select.css dependency and began creating custom react-select.less file

* Bulk of style changes to react-select dropdown

* Fixed style bugs such as cursor placement on search

* Remove buttons.less bootstrap dependency

* COMPASS-763: Include es2015 babel preset as dev dependency (#873)

* COMPASS-709: Enable Drag&Drop functionality for DraggableFields (#869)

* adds react-dnd module and makes draggable-field component draggable

* wraps encoding-channel in dropTarget

* render draggable component on drop in encoding channel

* use field path to mapFieldToChannel + fix tests

* reset the store on collection or query change

* uses path instead of field name update mapping of channels

* fix enzyme tests after react-dnd

* add a highlight on encoding channel hover

* prevents selecting of text on draggable field

* prevent drag from encoding channel

* reset initial chart state on chart store only when namespace has changed

--- a/src/internal-packages/indexes/styles/create-index-modal.less
+++ b/src/internal-packages/indexes/styles/create-index-modal.less
@@ -27,10 +27,16 @@
       }
 
       .col-md-6 {
+        padding-right: 0px;
+
         .dropdown-menu {
           max-height: 400px;
           overflow: auto;
         }
+      }
+
+      .col-md-4 {
+        padding-right: 0px;
       }
     }
 
@@ -42,7 +48,8 @@
       margin-bottom: 5px;
 
       .has-error .Select-control {
-        border-color: #ef4c4c;
+        border: 1px solid #EF4C4C;
+        box-shadow: 0 2px 6px 0 rgba(239,76,76,0.30);
       }
 
       .create-index-field-dropdown-name {
