Created new bootstrap.less compilation file, fixed ordering of style sheets

--- a/src/app/styles/buttons.less
+++ b/src/app/styles/buttons.less
@@ -222,7 +222,7 @@
   &-menu {
     padding: 2px;
 
-    li > a { 
+    > li > a { 
       padding: 3px 8px;
       
       &:focus, &:hover, &:active { 
