fix hidden tabs

--- a/src/internal-packages/home/styles/index.less
+++ b/src/internal-packages/home/styles/index.less
@@ -66,6 +66,7 @@
       color: @chart1;
       margin-right: 2px;
       text-decoration: none;
+      white-space: nowrap;
     }
     span {
       margin-left: 2px;
