COMPASS-736: Fix Hidden Tabs (#877)
* fix hidden tabs

* short db long collection

--- a/src/internal-packages/home/styles/index.less
+++ b/src/internal-packages/home/styles/index.less
@@ -66,9 +66,11 @@
       color: @chart1;
       margin-right: 2px;
       text-decoration: none;
+      white-space: nowrap;
     }
     span {
       margin-left: 2px;
+      white-space: nowrap;
     }
   }
   .column-container {
