Add overflow and padding to chart draggable field labels
So you can click the aggregation dropdown for fields longer than 20 characters, and the `text-overflow: ellipsis` actually does something:
https://css-tricks.com/almanac/properties/t/text-overflow/

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -28,7 +28,9 @@
     color: @gray1;
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
-    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 10px;
     pointer-events: none;
+    text-overflow: ellipsis;
   }
 }
