chart-draggable-field: Update label => title

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -24,7 +24,7 @@
     border-left: 1px solid @gray3;
   }
 
-  &-label {
+  &-title {
     color: @gray1;
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
