Update padding to margin
So you don't see the fields above and below when dragging a DraggableField from the FieldPanel to the ChartPanel.

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -28,8 +28,8 @@
     color: @gray1;
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
+    margin: 10px;
     overflow: hidden;
-    padding: 10px;
     pointer-events: none;
     text-overflow: ellipsis;
   }
