--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -24,11 +24,13 @@
     border-left: 1px solid @gray3;
   }
 
-  &-label {
+  &-title {
     color: @gray1;
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
-    text-overflow: ellipsis;
+    margin: 10px;
+    overflow: hidden;
     pointer-events: none;
+    text-overflow: ellipsis;
   }
 }
