abstract react-tooltip to HadronToolTip

--- a/src/internal-packages/app/styles/index.less
+++ b/src/internal-packages/app/styles/index.less
@@ -1,5 +1,5 @@
 @import './modal-status-message.less';
-@import './not-writable-tooltip.less';
+@import './hadron-tooltip.less';
 @import './option-selector.less';
 @import './sortable-table.less';
 @import './status-row.less';
