Put collection-view styles in the collection package

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -13,6 +13,7 @@
 // Packages
 // @todo don't hard-code these, style manager needs to handle package styles
 @import "../internal-packages/app/styles/index.less";
+@import "../internal-packages/collection/styles/index.less";
 @import "../internal-packages/collection-stats/styles/index.less";
 @import "../internal-packages/chart/styles/index.less";
 @import "../internal-packages/crud/styles/index.less";
