--- a/src/app/styles/index.less
+++ b/src/app/styles/index.less
@@ -3,9 +3,10 @@
 @import "./caret.less";
 @import "./buttons.less";
 @import "./react-select.less";
-@import "./font-awesome/font-awesome.less";
+
 @import (css) "../../node_modules/highlight.js/styles/github.css";
 @import "palette.less";
+@import "fontawesome.less";
 @import "fonts.less";
 @import "mms-icons.less";
 
