--- a/src/internal-packages/server-stats/styles/rt-lists.less
+++ b/src/internal-packages/server-stats/styles/rt-lists.less
@@ -4,13 +4,17 @@
 .rt-perf {
   background-color: #3D4247;
   height: auto;
-  overflow: scroll;
+  overflow-y: scroll;
   padding-bottom: 100px;
   position: absolute;
   top: 88px;
   right: 10px;
   bottom: 10px;
   left: 260px;
+}
+
+.rt-perf ::-webkit-scrollbar {
+  display: none;
 }
 
 .rt__lists-out {
