only show scrollbar on sidebar when content overflows

--- a/src/internal-packages/sidebar/styles/index.less
+++ b/src/internal-packages/sidebar/styles/index.less
@@ -15,7 +15,7 @@
   color: #bfbfbe;
 
   &-content {
-    overflow-y: scroll;
+    overflow-y: auto;
     top: 114px;
     bottom: 0;
     width: 250px;
