--- a/src/app/index.less
+++ b/src/app/index.less
@@ -2,30 +2,32 @@
 @import "./styles/index.less";
 
 // Components
-@import "connect/index.less";
-@import "tour/index.less";
-@import "sidebar/index.less";
-@import "network-optin/index.less";
-@import "identify/index.less";
-
-@import "../auto-update/index.less";
+// @import "connect/index.less";
+// @import "tour/index.less";
+// @import "sidebar/index.less";
+// @import "network-optin/index.less";
+// @import "identify/index.less";
+//
+// @import "../auto-update/index.less";
 
 // Packages
 // @todo don't hard-code these, style manager needs to handle package styles
-@import "../internal-packages/app/styles/index.less";
-@import "../internal-packages/collection/styles/index.less";
-@import "../internal-packages/collection-stats/styles/index.less";
-@import "../internal-packages/chart/styles/index.less";
-@import "../internal-packages/crud/styles/index.less";
-@import "../internal-packages/database-ddl/styles/index.less";
-@import "../internal-packages/home/styles/index.less";
-@import "../internal-packages/status/styles/index.less";
-@import "../internal-packages/query/styles/index.less";
-@import "../internal-packages/schema/styles/index.less";
-@import "../internal-packages/schema/styles/mapbox-gl.css";
-@import "../internal-packages/indexes/styles/index.less";
-@import "../internal-packages/explain/styles/index.less";
+// @import "../internal-packages/app/styles/index.less";
+// @import "../internal-packages/collection/styles/index.less";
+// @import "../internal-packages/collection-stats/styles/index.less";
+// @import "../internal-packages/chart/styles/index.less";
+// @import "../internal-packages/crud/styles/index.less";
+// @import "../internal-packages/database-ddl/styles/index.less";
+// @import "../internal-packages/home/styles/index.less";
+// @import "../internal-packages/status/styles/index.less";
+// @import "../internal-packages/query/styles/index.less";
+// @import "../internal-packages/schema/styles/index.less";
+// @import "../internal-packages/schema/styles/mapbox-gl.css";
+// @import "../internal-packages/indexes/styles/index.less";
+// @import "../internal-packages/explain/styles/index.less";
 @import "../internal-packages/sidebar/styles/index.less";
-@import "../internal-packages/validation/styles/index.less";
-@import "../internal-packages/database/styles/index.less";
-@import "../internal-packages/instance-header/styles/index.less";
+// @import "../internal-packages/validation/styles/index.less";
+// @import "../internal-packages/database/styles/index.less";
+// @import "../internal-packages/instance-header/styles/index.less";
+// put this last. it contains layout flex styles
+// @import "../internal-packages/home/styles/index.less";
