--- a/src/internal-packages/chart/styles/chart-builder.less
+++ b/src/internal-packages/chart/styles/chart-builder.less
@@ -14,6 +14,7 @@
   &-chart-area {
     height: 100%;
     flex-grow: 10;
+    padding: 20px;
   }
 
   &-chart-panel, &-field-panel, &-chart-area {
