--- a/src/internal-packages/app/styles/hadron-tooltip.less
+++ b/src/internal-packages/app/styles/hadron-tooltip.less
@@ -1,7 +1,12 @@
 .hadron-tooltip {
   height: 24px;
   font-size: 11px;
+  opacity: 1 !important;
   padding: 3px 6px !important;
+}
+
+.opaque-tooltip {
+  opacity: 1 !important;
 }
 
 .tooltip-button-wrapper {
