style pass on charts

--- a/src/app/styles/palette.less
+++ b/src/app/styles/palette.less
@@ -81,6 +81,7 @@
 @alertOrangeBorder: #a06c29;
 @alertRed: #ef4c4c;
 @alertRedBg: #feeded;
+@alertRedText: #A94442;
 @alertBlue: #43b1e5;
 
 /* Semantic Colors */
