--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -1,36 +1,87 @@
 .chart-draggable-field {
-  width: 150px;
-  height: 20px;
-
+  align-items: stretch;
+  cursor: -webkit-grab;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   flex-wrap: nowrap;
 
-  border-radius: 20px;
-  background-color: @gray6;
-  margin: 3px 0;
+  &-item-container {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 24px;
+  }
 
-  &-measurement-toggle, &-aggregation-toggle {
+  &-item-container-title {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    overflow: hidden;
+  }
+
+  &-item {
+    border: 1px solid lighten(@gray5, 8%);
+    border-right-width: 0;
+    border-radius: 0;
     color: @gray1;
-    padding: 0 5px;
   }
 
-  &-measurement-toggle:hover, &-aggregation-toggle:hover {
-    color: @gray3;
+  &-action {
+    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
+    box-shadow: inset 0 -1px 0 0 lighten(@gray5, 8%);
+    cursor: pointer;
+    padding: 2px 0 1px;
+    text-align: center;
   }
 
-  &-aggregation-toggle {
-    border-left: 1px solid @gray3;
+  &-action:hover,
+  &-action:focus {
+    background: linear-gradient(180deg, #FFFFFF 0%, #EDEDED 100%);
+    border-color: @gray5;
+    box-shadow: inset 0 -1px 0 0 @gray5, 0 2px 4px 0 rgba(0,0,0,0.1);
   }
 
-  &-title {
-    color: @gray1;
+  &-action:active {
+    background: linear-gradient(180deg, #EDEDED 0%, #FFFFFF 99.31%);
+    border-color: @gray5;
+    box-shadow: inset 0 2px 2px 0 @gray5;
+  }
+
+  //the first menu item should have round corners on its left side
+  &-item-container:first-child .chart-draggable-field-action {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+
+  //the last menu item should have round corners on its right side
+  &-item-container:last-child .chart-draggable-field-action {
+    border-right-width: 1px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+
+  //when a menu item is a dropdown, and that dropdown is open
+  &-item-container.open .chart-draggable-field-action {
+    background: linear-gradient(180deg, #EDEDED 0%, #FFFFFF 99.31%);
+    box-shadow: inset 0 2px 2px 0 @gray5;
+  }
+
+  //remove button as menu item
+  &-action-remove {
+    color: @alertRedText;
+  }
+
+  //field title
+  &-title  {
+    background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
-    margin: 10px;
+    font-weight: bold;
     overflow: hidden;
+    padding: 4px 5px;
     pointer-events: none;
     text-overflow: ellipsis;
   }
+
+  // &:active .chart-draggable-field-item {
+  //   background: #eee;
+  // }
 }
