--- a/src/internal-packages/chart/styles/field-panel.less
+++ b/src/internal-packages/chart/styles/field-panel.less
@@ -26,15 +26,18 @@
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
     font-weight: bold;
-    margin-left: 9px;
+    margin-left: 6px;
     margin-bottom: 2px;
+    overflow: hidden;
+    padding-right: 4px;
+    text-overflow: ellipsis;
   }
 
   &-group {
-    background-color: @gray7;
-    // border: 1px solid @gray6;
+    border-left: 1px solid @gray6;
+    border-top: 1px solid @gray6;
     border-radius: 6px;
-    margin: 10px 0;
+    margin: 3px 0 6px 2px;
     padding: 6px 0;
   }
 
