Replace waitForWindowTitle in launch with waitForConnectView / getConnectHeaderText

--- a/src/app/connect/index.jade
+++ b/src/app/connect/index.jade
@@ -2,7 +2,7 @@
   div(data-hook='sidebar-subview')
   .form-container
     header
-      h2 Connect to Host
+      h2(data-test-id="connect-header") Connect to Host
 
     .message.error(data-hook="message-div")
       p(data-hook='message')
