Compass 981-02-chart-styles (#938)
* remove monospace font from draggable fields

* white-space nowrap

--- a/src/internal-packages/chart/styles/draggable-field.less
+++ b/src/internal-packages/chart/styles/draggable-field.less
@@ -15,6 +15,7 @@
     flex-shrink: 1;
     flex-basis: auto;
     overflow: hidden;
+    white-space: nowrap;
   }
 
   &-item {
@@ -72,7 +73,6 @@
   //field title
   &-title  {
     background: linear-gradient(180deg, #FFFFFF 0%, #F6F6F6 100%);
-    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 11px;
     font-weight: bold;
     overflow: hidden;
