COMPASS-863: Allow BSON type switch to anything

--- a/src/internal-packages/crud/styles/document-list.less
+++ b/src/internal-packages/crud/styles/document-list.less
@@ -3,6 +3,7 @@
   padding-top: 0;
   padding-bottom: 10px;
   position: relative;
+  max-width: ~"calc(100vw - 300px)";
 
   &-item {
     position: relative;
