--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -2,10 +2,10 @@
   display: inline-block;
   border: none;
   padding-left: 1px;
-  max-width: 45vw;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: ~"calc(85vw - 260px);";
 
   &-is-string {
     white-space: pre-line;
@@ -48,7 +48,6 @@
   }
 
   &-is-editing {
-    box-shadow: 2px 5px 8px rgba(0,0,0,0.2);
     border: 1px solid @gray3;
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
     z-index: 10;
@@ -56,15 +55,16 @@
     margin-bottom: -1px;
   }
 
+  &-is-invalid-type {
+    background-color: #F88379 !important;
+    color: #FFFFFF !important;
+  }
+
   &-wrapper {
+    flex-grow: 3;
+
     &-is-string {
       color: steelblue;
-      &::before {
-        content: "\"";
-      }
-      &::after {
-        content: "\"";
-      }
     }
   }
 }
