Fixing styles in edit mode

--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -65,6 +65,12 @@
 
     &-is-string {
       color: steelblue;
+      &::before {
+        content: "\"";
+      }
+      &::after {
+        content: "\"";
+      }
     }
   }
 }
