--- a/src/internal-packages/crud/styles/element.less
+++ b/src/internal-packages/crud/styles/element.less
@@ -21,6 +21,7 @@
     display: inline-block;
     vertical-align: top;
     -webkit-user-select: text;
+    flex-grow: 3;
 
     &-is-string {
       color: steelblue;
