Add in &-can-drop from the tutorial
http://react-dnd.github.io/react-dnd/docs-tutorial.html

--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -22,6 +22,12 @@
       background: white;
       box-shadow: 0 0 6px 0 rgba(67,177,229, .6);
     }
+
+    &-can-drop {
+      border-color: @chart6;
+      background: white;
+      box-shadow: 0 0 6px 0 rgba(67,177,229, .6);
+    }
   }
 
 }
