Allows editing of object ids

--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -72,5 +72,15 @@
         content: "\"";
       }
     }
+
+    &-is-objectid {
+      color: orangered;
+      &::before {
+        content: "ObjectID('";
+      }
+      &::after {
+        content: "')";
+      }
+    }
   }
 }
