adding tooltips on errors

--- a/src/internal-packages/crud/styles/editable-element-value.less
+++ b/src/internal-packages/crud/styles/editable-element-value.less
@@ -7,6 +7,13 @@
   overflow: hidden;
   max-width: ~"calc(85vw - 260px);";
 
+  &-tooltip {
+    height: 20px !important;
+    font-size: 11px !important;
+    opacity: 1 !important;
+    padding: 3px 6px !important;
+  }
+
   &-is-string {
     white-space: pre-line;
     word-break: break-all;
