remove scrollbar when sidebar collapsed

--- a/src/internal-packages/sidebar/styles/index.less
+++ b/src/internal-packages/sidebar/styles/index.less
@@ -176,6 +176,10 @@
     display: none;
   }
 
+  .compass-sidebar-content {
+    visibility: hidden;
+  }
+
   .compass-sidebar-instance {
     padding-top: 6px;
     padding-bottom: 10px;
