add has-focus css for query bar

--- a/src/internal-packages/query/styles/querybar.less
+++ b/src/internal-packages/query/styles/querybar.less
@@ -24,6 +24,10 @@
     }
   }
 
+  &-has-focus {
+    border-color: @alertBlue;
+  }
+
   &-option-group {
     display: flex;
     flex-direction: row;
