aggregation and field type controls broken out on to their own row.

--- a/src/internal-packages/chart/styles/encoding-channel.less
+++ b/src/internal-packages/chart/styles/encoding-channel.less
@@ -11,9 +11,9 @@
 
   &-droppable {
     background: white;
-    border: 1px solid @gray6;
+    border: 1px solid @gray5;
     border-radius: 3px;
-    color: #ccc;
+    color: @gray5;
     padding: 4px;
     text-overflow: ellipsis;
 
