ssh-tunnel-status as separate package

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -29,3 +29,4 @@
 @import "../internal-packages/validation/styles/index.less";
 @import "../internal-packages/database/styles/index.less";
 @import "../internal-packages/instance-header/styles/index.less";
+@import "../internal-packages/ssh-tunnel-status/styles/index.less";
