added auto on flex-basis

--- a/src/internal-packages/collection/styles/index.less
+++ b/src/internal-packages/collection/styles/index.less
@@ -20,6 +20,7 @@
     padding-right: 15px;
     border-right: 1px solid @gray7;
     margin-top: 6px;
+    flex-basis: auto;
   }
 
   //remove the right border from the collection name
