alternatively, this last commit puts the collection title beneath the stats to leave more width.

--- a/src/internal-packages/collection-stats/styles/collection-stats.less
+++ b/src/internal-packages/collection-stats/styles/collection-stats.less
@@ -7,8 +7,12 @@
 
   &-list {
     padding-left: 15px;
-    flex-grow: 1;
+
     border-right: 1px solid @gray7;
+    flex-basis: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    
   }
 
   &-list:last-child {
