--- a/src/internal-packages/collection/styles/index.less
+++ b/src/internal-packages/collection/styles/index.less
@@ -9,18 +9,14 @@
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: auto;
-    display: flex;
-
   }
 
   &-header-item {
     display: flex;
-    flex: 1;
     overflow: hidden;
     padding-right: 15px;
     border-right: 1px solid @gray7;
     margin-top: 6px;
-    flex-basis: auto;
   }
 
   //remove the right border from the collection name
@@ -48,8 +44,8 @@
   &-collection-name,
   &-namespace-delimeter {
     flex-basis: auto;
-    flex-grow: 1;
-    flex-shrink: 1;
+    // flex-grow: 1;
+    // flex-shrink: 1;
     overflow: hidden;
     text-overflow: ellipsis;
   }
