some whitespace cleanup

--- a/src/internal-packages/collection-stats/styles/collection-stats.less
+++ b/src/internal-packages/collection-stats/styles/collection-stats.less
@@ -1,17 +1,18 @@
 .collection-stats {
   text-align: right;
-  padding-top: 7px;
+  padding-top: 9px;
   padding-right: 0;
   justify-content: flex-end;
   display: flex;
 
   &-list {
     padding-left: 15px;
+    padding-right: 3px;
     border-right: 1px solid @gray7;
     flex-basis: auto;
     flex-grow: 0;
     flex-shrink: 0;
-
+    margin-bottom: 0;
   }
 
   &-list:last-child {
