--- a/src/internal-packages/collection/styles/index.less
+++ b/src/internal-packages/collection/styles/index.less
@@ -18,8 +18,9 @@
     text-overflow: ellipsis;
     display: flex;
     padding-left: 15px;
+    padding-right: 15px;
     margin: 0;
-    padding-top: 12px;
+    padding-top: 9px;
   }
 
   &-database-name,
@@ -28,6 +29,7 @@
     flex-basis: auto;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &-collection-name {
