--- a/src/internal-packages/collection/styles/index.less
+++ b/src/internal-packages/collection/styles/index.less
@@ -8,29 +8,46 @@
     padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
-    flex-basis: 50px;
-    /*
-    END GLOBAL FLEXBOX LAYOUT STYLES
-    */
-    .row {
-      margin-left: 0;
-      margin-right: 0;
-    }
+    flex-basis: auto;
   }
-  h1 {
-    margin-top: 12px;
+
+  &-title {
     font-size: 24px;
     font-weight: normal;
     overflow: hidden;
     text-overflow: ellipsis;
-    a {
-      color: @chart1;
-      margin-right: 2px;
-      text-decoration: none;
-      cursor: pointer;
-    }
-    span {
-      margin-left: 2px;
-    }
+    display: flex;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0;
+    padding-top: 9px;
+  }
+
+  &-database-name,
+  &-collection-name,
+  &-namespace-delimeter {
+    flex-basis: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  &-collection-name {
+    flex-grow: 2;
+  }
+
+  &-namespace-delimeter {
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
+
+  &-database-name {
+    flex-shrink: 2;
+  }
+
+  &-database-name-link {
+    color: @chart1;
+    text-decoration: none;
+    cursor: pointer;
   }
 }
